samples/_failures_safe/1761520156_223ec1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7cedcc6b.c: In function ‘dfs’:
./samples/SAFE/__tmp_7cedcc6b.c:178:17: error: expected declaration or statement at end of input
  178 | void dfs(struct Graph* graph, int start_id) {
      |                 ^~~~~
